corrected z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@
     padding: 50px;
     width: 500px;
     height: 500px;
+    z-index: 10;
 }
 
 .main-message {
